# koharu-lilith-team-edition-

koharu-ai/: Cargo.toml
koharu-ai/src/: lib.rs
koharu-app/src/: app.rs  lib.rs
koharu-llm/src/providers/: mod.rs  yandex.rs
koharu-rpc/src/: api.rs
tests/integration-tests/client/: Cargo.toml  README.md
tests/integration-tests/client/.openapi-generator/: FILES
tests/integration-tests/client/docs/: AppEvent.md  AppEventOneOf.md  AppEventOneOf1.md  AppEventOneOf2.md  AppEventOneOf3.md  AppEventOneOf4.md  AppEventOneOf5.md  AppEventOneOf6.md  AppEventOneOf7.md  AppEventOneOf8.md  AppEventOneOf9.md  ConfigPatch.md  CreatePagesFromPathsRequest.md  DataConfigPatch.md  DefaultApi.md  EngineCatalog.md  ExportProjectRequest.md  JobWarningEvent.md  ListDownloadsResponse.md  ListOperationsResponse.md  MaskRole.md  PipelineConfig.md  PipelineConfigPatch.md  ProjectMeta.md  ProjectMetaPatch.md  ProviderConfig.md  ReadingOrder.md  StartPipelineRequest.md
tests/integration-tests/tests/: llm.rs  meta.rs
ui/: openapi.json
ui/app/: globals.css  layout.tsx
ui/components/: AppInitializationSkeleton.tsx  MenuBar.tsx  Navigator.tsx  Panels.tsx  SettingsDialog.tsx  WelcomeScreen.tsx
ui/components/canvas/: CanvasToolbar.tsx  TextBlockLayer.tsx
ui/components/panels/: LayersPanel.tsx  RenderControlsPanel.tsx  TextBlocksPanel.tsx
ui/lib/: i18n.ts
ui/lib/api/default/: default.faker.ts  default.msw.ts  default.ts
ui/lib/api/schemas/: index.ts  pipelineConfig.ts  pipelineConfigPatch.ts  (+3 more)
ui/lib/io/: openFiles.ts  pagesIo.ts
ui/lib/stores/: preferencesStore.ts
(+134 files in other folders)
