[package]
name = "koharu-ai"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
